--- a/src/LSTM/LSTM_V1.4.ipynb
+++ b/src/LSTM/LSTM_V1.4.ipynb
@@ -105,8 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SET SOURCE PATHS HERE\n",
-    "___"
+    "___\n",
+    "SET SOURCE PATHS HERE:"
    ]
   },
   {
@@ -120,6 +120,14 @@
     "#parquet_folder = r\"C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\SIEGLEW_COPY\\data\\processed\" # Trip parquet files\n",
     "\n",
     "save_model_folder = \"/home/sieglew/pth\" # Save model files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "DATA PREPROCESSING"
    ]
   },
   {
@@ -241,6 +249,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "NETWORK ARCHITECTURE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 439,
    "metadata": {},
@@ -301,13 +317,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 440,
    "metadata": {},
@@ -337,6 +346,14 @@
     "# INSTANTIATE MODEL --------------------\n",
     "model = LSTM1(input_size, hidden_size, num_layers).to(DEVICE)  #, num_classes, X_train_T_final.shape[1]\n",
     "print(f\"{'-'*60}\\n\",model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "TRAINING SETUP"
    ]
   },
   {
@@ -565,6 +582,14 @@
     "\n",
     "    print(f\"{'-'*60}\\nTraining Completed.\\tExecution Time: \", f\"{(time.perf_counter() - start_time):.2f}\", f\"s\\n\")\n",
     "    return train_losses, epoch, training_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "NETWORK TRAINING"
    ]
   },
   {
@@ -1964,6 +1989,14 @@
     "\n",
     "plt.plot(range(1, NUM_EPOCHS + 1), train_losses, label='train_loss')\n",
     "fig.tight_layout(); plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "EVALUATION / POST-PROCESSING"
    ]
   },
   {
