--- a/src/LSTM/LSTM_V1_5.ipynb
+++ b/src/LSTM/LSTM_V1_5.ipynb
@@ -11,6 +11,7 @@
     "LSTM Training\n",
     "Version: V1.5\n",
     "Modified: 18.10.2024\n",
+    "William Siegle\n",
     "---------------------------------------------------------------------\n",
     "notebook can be converted to python script using: \n",
     "(python -m) jupytext --to py FILENAME.ipynb\n",
