commit from ssh server

--- a/src/LSTM/LSTM_V1_5.ipynb
+++ b/src/LSTM/LSTM_V1_5.ipynb
@@ -498,7 +498,7 @@
     "            # Reset the index if you want 'signal_time' to be a column again\n",
     "            #df_resampled.reset_index(inplace=True)\n",
     "            # filling missing values ---------------\n",
-    "            df_resampled.fillna(df.median(), inplace=True)  # Basic Median Filling\n",
+    "            # df_resampled.fillna(df.median(), inplace=True)  # Basic Median Filling\n",
     "\n",
     "            # assigning inputs and targets and reshaping ---------------\n",
     "            X = df_resampled[input_columns].values\n",
