create new dataset

--- a/data/Parquet_Stats.ipynb
+++ b/data/Parquet_Stats.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,30 +29,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify Data Location\n",
-    "parquet_folder = '/home/sieglew/data/processed'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import pyarrow.parquet as pq\n",
+    "import pickle\n",
+    "from datetime import datetime\n",
+    "from pathlib import Path\n",
+    "from scipy.signal import savgol_filter\n",
+    "from scipy.stats import zscore, median_abs_deviation\n",
     "import pyarrow.parquet as pq \n",
-    "import pickle"
+    "\n",
+    "from IPython.core.magic import register_cell_magic\n",
+    "@register_cell_magic\n",
+    "def skip(line, cell):   # cells can be skipped by using '%%skip' in the first line\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data:\tprocessed, trips_processed_final, trips_processed_pickles, trips_processed_resampled, y_true\n",
+      "C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN:\t.git, archive, data, project, ref, src, test\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ------------ LOCATE REPOSITORY/DATASTORAGE IN CURRENT SYSTEM ENVIRONMENT  --------------\n",
+    "import sys, os; from pathlib import Path                                                #|\n",
+    "global ROOT, DATA_PATH, IS_NOTEBOOK; IS_NOTEBOOK = True                                 #|\n",
+    "ROOT = Path('..').resolve() if IS_NOTEBOOK else Path('.').resolve()                      #|\n",
+    "sys.path.append(os.path.abspath(ROOT))                                                  #|\n",
+    "from data import get_data_path  # paths set in \"data/__init__.py\"                       #|\n",
+    "DATA_PATH = get_data_path()                                                             #|\n",
+    "print(f\"{'-'*60}\\n{DATA_PATH}:\\t{', '.join([_.name for _ in DATA_PATH.glob('*/')])}\") #|\n",
+    "print(f\"{ROOT}:\\t{', '.join([_.name for _ in ROOT.glob('*/')])}\")   \t                #|\n",
+    "# ----------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -130,53 +157,42 @@
      "text": [
       "Volts Database Status:\n",
       "--------------------------------------------------\n",
-      "Directory: /home/sieglew/data/processed\n",
-      "Files: 3197 parquet files found.\n",
+      "Directory: C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data\\trips_processed_resampled\n",
+      "Files: 2951 parquet files found.\n",
       "Unique id values:  {'983'}\n",
       "Total number of vehicles:  15\n",
-      "Total number of complete trips:  3197\n",
+      "Total number of complete trips:  2951\n",
       "--------------------------------------------------\n",
       "Trips per vehicle:\n",
-      "      V17 :  276 complete trips\n",
-      "      V14 :  578 complete trips\n",
-      "      V19 :  158 complete trips\n",
-      "      V13 :  310 complete trips\n",
-      "      V18 :  303 complete trips\n",
-      "      V15 :  199 complete trips\n",
-      "      V101 :  222 complete trips\n",
-      "      V1 :  183 complete trips\n",
-      "      V4 :  186 complete trips\n",
-      "      V12 :  262 complete trips\n",
-      "      V16 :  333 complete trips\n",
-      "      V11 :  59 complete trips\n",
-      "      V2 :  57 complete trips\n",
-      "      V10 :  68 complete trips\n",
+      "      V101 :  213 complete trips\n",
       "      V102 :  3 complete trips\n",
+      "      V10 :  2 complete trips\n",
+      "      V11 :  52 complete trips\n",
+      "      V12 :  261 complete trips\n",
+      "      V13 :  302 complete trips\n",
+      "      V14 :  575 complete trips\n",
+      "      V15 :  198 complete trips\n",
+      "      V16 :  304 complete trips\n",
+      "      V17 :  262 complete trips\n",
+      "      V18 :  301 complete trips\n",
+      "      V19 :  146 complete trips\n",
+      "      V1 :  141 complete trips\n",
+      "      V2 :  12 complete trips\n",
+      "      V4 :  179 complete trips\n",
       "--------------------------------------------------\n"
      ]
     }
    ],
    "source": [
+    "parquet_folder = Path(DATA_PATH, 'trips_processed_resampled')\n",
     "all_files, trip_by_vehicle = trip_data_info(parquet_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'parquet_folder' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[43mparquet_folder\u001b[49m\n\u001b[0;32m      2\u001b[0m cwd \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mgetcwd()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(cwd,data_dir)):\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'parquet_folder' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_dir = parquet_folder\n",
     "cwd = os.getcwd()\n",
@@ -196,6 +212,216 @@
     "trips_sizes = pd.DataFrame(trip_size, all_files)\n",
     "\n",
     "trips_sizes.columns = ['trip_size']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trip_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>v_id983V16_trip216.parquet</th>\n",
+       "      <td>513235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip300_2.parquet</th>\n",
+       "      <td>484381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip364_2.parquet</th>\n",
+       "      <td>464288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip363_2.parquet</th>\n",
+       "      <td>462661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip358_2.parquet</th>\n",
+       "      <td>440238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V101_trip74.parquet</th>\n",
+       "      <td>1288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V17_trip241.parquet</th>\n",
+       "      <td>1281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V101_trip19.parquet</th>\n",
+       "      <td>1277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V4_trip128.parquet</th>\n",
+       "      <td>1238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V19_trip44.parquet</th>\n",
+       "      <td>1236</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2951 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              trip_size\n",
+       "v_id983V16_trip216.parquet       513235\n",
+       "v_id983V14_trip300_2.parquet     484381\n",
+       "v_id983V14_trip364_2.parquet     464288\n",
+       "v_id983V14_trip363_2.parquet     462661\n",
+       "v_id983V14_trip358_2.parquet     440238\n",
+       "...                                 ...\n",
+       "v_id983V101_trip74.parquet         1288\n",
+       "v_id983V17_trip241.parquet         1281\n",
+       "v_id983V101_trip19.parquet         1277\n",
+       "v_id983V4_trip128.parquet          1238\n",
+       "v_id983V19_trip44.parquet          1236\n",
+       "\n",
+       "[2951 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trips_sizes.sort_values(by='trip_size', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trip_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip300_2.parquet</th>\n",
+       "      <td>71114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip364_2.parquet</th>\n",
+       "      <td>53322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V16_trip216.parquet</th>\n",
+       "      <td>52616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip322.parquet</th>\n",
+       "      <td>51167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V14_trip363_2.parquet</th>\n",
+       "      <td>50486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V13_trip167.parquet</th>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V101_trip19.parquet</th>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V101_trip74.parquet</th>\n",
+       "      <td>131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V101_trip166.parquet</th>\n",
+       "      <td>131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>v_id983V17_trip241.parquet</th>\n",
+       "      <td>129</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2951 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              trip_size\n",
+       "v_id983V14_trip300_2.parquet      71114\n",
+       "v_id983V14_trip364_2.parquet      53322\n",
+       "v_id983V16_trip216.parquet        52616\n",
+       "v_id983V14_trip322.parquet        51167\n",
+       "v_id983V14_trip363_2.parquet      50486\n",
+       "...                                 ...\n",
+       "v_id983V13_trip167.parquet          137\n",
+       "v_id983V101_trip19.parquet          135\n",
+       "v_id983V101_trip74.parquet          131\n",
+       "v_id983V101_trip166.parquet         131\n",
+       "v_id983V17_trip241.parquet          129\n",
+       "\n",
+       "[2951 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trips_sizes.sort_values(by='trip_size', ascending=False)"
    ]
   },
   {
