--- a/src/LSTM/LSTM_V1_5.ipynb
+++ b/src/LSTM/LSTM_V1_5.ipynb
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "# FILE SOURCES ---------------------------------------------------------------\n",
-    "parquet_folder = Path(DATA_PATH, \"processed_resampled\") # Trip parquet files\n",
+    "input_folder = Path(DATA_PATH, \"processed_resampled\") # Trip parquet files\n",
     "save_model_folder = Path(ROOT, \"src\", \"models\", \"pth\")"
    ]
   },
@@ -182,7 +182,7 @@
    "outputs": [],
    "source": [
     "# PREPARE TRAIN & TEST SET ---------------------------------------------------\n",
-    "all_files = [Path(parquet_folder, f) for f in os.listdir(parquet_folder) if f.endswith(\".parquet\")]\n",
+    "all_files = [Path(input_folder, f) for f in os.listdir(input_folder) if f.endswith(\".parquet\")]\n",
     "\n",
     "# select Only first 100 Input-files in total\n",
     "files = all_files\n",
@@ -837,7 +837,7 @@
     "plt.plot(range(1, NUM_EPOCHS + 1), train_losses, label='train_loss')\n",
     "plt.plot(range(1, NUM_EPOCHS + 1), val_losses, label='val_loss')\n",
     "plt.yscale('log')\n",
-    "fig.tight_layout(); plt.legend();\n"
+    "fig.tight_layout(); plt.legend();"
    ]
   },
   {
@@ -933,17 +933,11 @@
     "state = torch.load(model_destintion_path)\n",
     "model.load_state_dict(state['state_dict'])\n",
     "optimizer.load_state_dict(state['optimizer'])\n",
-    "''';"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# keep best performing model:\n",
-    "#best_model_state = deepcopy(model.state_dict())"
+    "''';\n",
+    "\n",
+    "# OPTIONAL: KEEP BEST PERFORMING MODEL -----------------\n",
+    "'''\n",
+    "best_model_state = deepcopy(model.state_dict())''';"
    ]
   },
   {
@@ -1150,7 +1144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
