--- a/src/utils/data_utils.ipynb
+++ b/src/utils/data_utils.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------------\n",
-      "/home/sieglew/MA-Data:\t\tprocessed_resampled, TripFiles, __pycache__, processed_2, y_true, processed, processed_new\n",
+      "/home/sieglew/MA-Data:\t\tprocessed_resampled, TripFiles, __pycache__, processed_2, trips_processed_resampled, y_true, processed, trips_processed_pickles, processed_new, trips_processed_final\n",
       "/home/sieglew/MA-eR-PINN:\tproject, ref, test, data, src, .git, archive\n"
      ]
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,98 +91,6 @@
     "df.sort_index(axis=1, inplace=True) # sort columns\n",
     "df.info()                        # show DataFrame info"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>signal_time</th>\n",
-       "      <th>signal_date</th>\n",
-       "      <th>signal_ts</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-01-17 05:37:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.642398e+15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-01-17 05:37:10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.642398e+15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-01-17 05:37:20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.642398e+15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-01-17 05:37:30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.642398e+15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-01-17 05:37:40</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.642398e+15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          signal_time  signal_date     signal_ts\n",
-       "0 2022-01-17 05:37:00          NaN  1.642398e+15\n",
-       "1 2022-01-17 05:37:10          NaN  1.642398e+15\n",
-       "2 2022-01-17 05:37:20          NaN  1.642398e+15\n",
-       "3 2022-01-17 05:37:30          NaN  1.642398e+15\n",
-       "4 2022-01-17 05:37:40          NaN  1.642398e+15"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# show selected signals:\n",
-    "df[['signal_time', 'signal_date', 'signal_ts']].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
