--- a/data/preprocess.ipynb
+++ b/data/preprocess.ipynb
@@ -32,8 +32,8 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------------\n",
-      "C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data:\tfinal, processed, trips_processed_final, trips_processed_pickles, trips_processed_resampled, y_true\n",
-      "C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN:\t.git, archive, data, project, ref, src, test\n"
+      "/home/sieglew/MA-Data:\t__pycache__, trips_processed_resampled, final, y_true, processed, trips_processed_pickles, trips_processed_final\n",
+      "/home/sieglew/MA-eR-PINN:\tproject, ref, test, data, src, .git, archive\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "3197"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6670,7 +6670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -6705,36 +6705,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2975"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(trips) * 58"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of values in all trip files: 12541311798\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'parquet' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m     total_values_count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m metadata\u001b[38;5;241m.\u001b[39mnum_rows \u001b[38;5;241m*\u001b[39m metadata\u001b[38;5;241m.\u001b[39mnum_columns\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal number of values in all trip files: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_values_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 9\u001b[0m \u001b[43mparquet\u001b[49m\u001b[38;5;241m.\u001b[39mmeta \u001b[38;5;241m=\u001b[39m pq\u001b[38;5;241m.\u001b[39mread_metadata(Path(parquet_folder, trips[\u001b[38;5;241m0\u001b[39m]))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'parquet' is not defined"
+      "Total number of values in all trip files: 6380667406\n",
+      "Average file length: 36979\n"
      ]
     }
    ],
    "source": [
     "total_values_count = 0\n",
+    "trips = get_files(trips_processed_final, \".parquet\", full=True)\n",
     "\n",
     "for trip_file in trips:\n",
     "    metadata = pq.read_metadata(Path(parquet_folder, trip_file))\n",
     "    total_values_count += metadata.num_rows * metadata.num_columns\n",
     "\n",
     "print(f\"Total number of values in all trip files: {total_values_count}\")\n",
+    "print(f\"Average file length: {round(total_values_count / (len(trips) * metadata.num_columns))}\")\n",
     "\n"
    ]
   },
@@ -11141,7 +11153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
