--- a/src/LSTM/LSTM_V1_5.ipynb
+++ b/src/LSTM/LSTM_V1_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +93,10 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------------\n",
-      "Torch version:  2.3.1+cpu\n",
-      "Cuda available:  False\n",
-      "   --> Using cpu device\n"
+      "Torch version:  2.4.1+cu121\n",
+      "Cuda available:  True\n",
+      "Current Device: 0,  Total Count: 4\n",
+      "   --> Using cuda device\n"
      ]
     }
    ],
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,8 +124,8 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------------\n",
-      "C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data:\t\tprocessed, trips_processed_final, trips_processed_pickles, trips_processed_resampled, y_true\n",
-      "C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN:\t.git, archive, data, project, ref, src, test\n"
+      "/home/sieglew/MA-Data:\t\t__pycache__, trips_processed_resampled, final, y_true, processed, trips_processed_pickles, trips_processed_final\n",
+      "/home/sieglew/MA-eR-PINN:\tproject, ref, test, data, src, .git, archive\n"
      ]
     }
    ],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,19 +437,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------------------------------------------\n",
-      " LSTM1(\n",
-      "  (lstm): LSTM(77, 64, num_layers=2, batch_first=True, dropout=0.2)\n",
-      "  (relu): ReLU()\n",
-      "  (fc_test): Linear(in_features=64, out_features=1, bias=True)\n",
-      ")\n"
+     "ename": "NameError",
+     "evalue": "name 'input_columns' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# MODEL CONFIGURATION -----------------------------------------------------------------------\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# LAYERS --------------------------------\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m input_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[43minput_columns\u001b[49m)     \u001b[38;5;66;03m# expected features in the input x\u001b[39;00m\n\u001b[1;32m      5\u001b[0m hidden_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m64\u001b[39m                    \u001b[38;5;66;03m# features in the hidden state h\u001b[39;00m\n\u001b[1;32m      6\u001b[0m num_layers \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m                      \u001b[38;5;66;03m# recurrent layers for stacked LSTMs. Default: 1\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'input_columns' is not defined"
      ]
     }
    ],
@@ -869,14 +869,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model saved to:\t /home/sieglew/MA-eR-PINN/src/models/pth/LSTM1_241024_153523.pth\n"
+      "Model saved to:\t /home/sieglew/MA-eR-PINN/src/models/pth/LSTM1_241030_162158.pth\n"
      ]
     }
    ],
@@ -884,12 +884,11 @@
     "# SAVE MODEL  -----------------------------------------------------------------\n",
     "\n",
     "# create unique model name\n",
-    "timestamp = datetime.now().strftime(\"%y%m%d_%H%M%S\")\n",
-    "model_name = f\"{model.__class__.__name__}_{timestamp}\"\n",
+    "model_name = f\"{model.__class__.__name__}_{datetime.now().strftime(\"%y%m%d_%H%M%S\")}\"\n",
     "model_destination_path = Path(save_model_folder, model_name + \".pth\")\n",
     "\n",
     "# SAVE STATE_DICT FOR MODEL INFERENCE -----------------\n",
-    "torch.save(model.state_dict(), model_destination_path)\n",
+    "torch.save(model, model_destination_path)\n",
     "print(f\"Model saved to:\\t {model_destination_path}\")\n",
     "'''\n",
     "# Later to restore:\n",
@@ -907,7 +906,7 @@
     "    'train_loader': train_loader, \n",
     "    'train_losses': train_losses\n",
     "}\n",
-    "torch.save(state, model_destination_path)\n",
+    "torch.save(model, state, model_destination_path)\n",
     "print(f\"Complete Model dict saved to:\\t {model_destination_path}\")\n",
     "\n",
     "# Later to restore:\n",
@@ -923,35 +922,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_797881/167588252.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(model_destination_path)) # type: ignore\n"
+     "ename": "AttributeError",
+     "evalue": "'collections.OrderedDict' object has no attribute 'eval'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model_destination_path \u001b[38;5;241m=\u001b[39m Path(save_model_folder, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLSTM1_241028_104948.pth\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m model \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(model_destination_path, weights_only\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meval\u001b[49m() \u001b[38;5;66;03m# set model to evaluation mode for inference\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'collections.OrderedDict' object has no attribute 'eval'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LSTM1(\n",
-       "  (lstm): LSTM(77, 64, num_layers=2, batch_first=True, dropout=0.2)\n",
-       "  (relu): ReLU()\n",
-       "  (fc_test): Linear(in_features=64, out_features=1, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model_destination_path = Path(save_model_folder, \"LSTM1_241028_104948.pth\")\n",
-    "model.load_state_dict(torch.load(model_destination_path)) # type: ignore\n",
+    "model = torch.load(model_destination_path, weights_only=False)\n",
     "model.eval() # set model to evaluation mode for inference"
    ]
   },
@@ -1250,7 +1238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
