--- a/data/preprocess.ipynb
+++ b/data/preprocess.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -32,8 +32,8 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------------\n",
-      "/home/sieglew/MA-Data:\t__pycache__, trips_processed_resampled, final, y_true, processed, trips_processed_pickles, trips_processed_final\n",
-      "/home/sieglew/MA-eR-PINN:\tproject, ref, test, data, src, .git, archive\n"
+      "/home/sieglew/MA-eR-PINN:\tproject, ref, test, data, src, .git, archive\n",
+      "/home/sieglew/MA-Data:\t\t__pycache__, trips_processed_resampled, final, y_true, processed, trips_processed_pickles, trips_processed_final\n"
      ]
     }
    ],
@@ -41,12 +41,12 @@
     "# ------------ LOCATE REPOSITORY/DATASTORAGE IN CURRENT SYSTEM ENVIRONMENT  --------------\n",
     "import sys, os; from pathlib import Path                                                #|\n",
     "global ROOT, DATA_PATH, IS_NOTEBOOK; IS_NOTEBOOK = True                                 #|\n",
-    "ROOT = Path('.').resolve() if IS_NOTEBOOK else Path('.').resolve()                      #|\n",
+    "ROOT = Path('..').resolve() if IS_NOTEBOOK else Path('.').resolve()                     #|\n",
+    "print(f\"{'-'*60}\\n{ROOT}:\\t{', '.join([_.name for _ in ROOT.glob('*/')])}\")             #|\n",
     "sys.path.append(os.path.abspath(ROOT))                                                  #|\n",
     "from data import get_data_path  # paths set in \"data/__init__.py\"                       #|\n",
     "DATA_PATH = get_data_path()                                                             #|\n",
-    "print(f\"{'-'*60}\\n{DATA_PATH}:\\t{', '.join([_.name for _ in DATA_PATH.glob('*/')])}\") #|\n",
-    "print(f\"{ROOT}:\\t{', '.join([_.name for _ in ROOT.glob('*/')])}\")   \t                #|\n",
+    "print(f\"{DATA_PATH}:\\t\\t{', '.join([_.name for _ in DATA_PATH.glob('*/')])}\")           #|\n",
     "# ----------------------------------------------------------------------------------------"
    ]
   },
@@ -6670,7 +6670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -6695,32 +6695,12 @@
     "\n",
     "    return files_with_nans\n",
     "\n",
-    "directories = [trips_processed_resampled, trips_processed_final]\n",
+    "directories = [Path(DATA_PATH, \"final\", \"trips_processed_resampled\"), Path(DATA_PATH, \"final\", \"trips_processed_final\")]\n",
     "files_with_nans = check_nans_in_parquet_files(directories)\n",
     "\n",
     "print(\"Files with NaNs:\")\n",
     "for file in files_with_nans:\n",
     "    print(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2975"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(trips) * 58"
    ]
   },
   {
