--- a/src/LSTM/LSTM_v7.ipynb
+++ b/src/LSTM/LSTM_v7.ipynb
@@ -1212,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
