--- a/src/LSTM/LSTM_v7.ipynb
+++ b/src/LSTM/LSTM_v7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,11 @@
     "\n",
     "    # PREPROCESSING: --------------------------------------------------------------\n",
     "    \"TRAIN_VAL_TEST\":   [0.8, 0.15, 0.05], # [train, val, test]\n",
-    "    \"MAX_FILES\":        1000, #None, # None: all files\n",
+    "    \"MAX_FILES\":        None, #None, # None: all files\n",
     "    \n",
     "    # TORCH: ----------------------------------------------------------------------\n",
     "    \"TORCH_SEED\"  :     42,\n",
-    "    \"BATCH_SIZE\":       1024,   # [16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768]\n",
+    "    \"BATCH_SIZE\":       512,   # [16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768]\n",
     "    \"NUM_EPOCHS\":       3,\n",
     "    \"LEARNING_RATE\":    5e-3,   # 0.001 lr\n",
     "    \"HIDDEN_SIZE\":      128,\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
       "Input Data:\t/home/sieglew/MA-Data/TripSequences/trips_processed_final\n",
       "Store model in:\t/home/sieglew/MA-eR-PINN/src/models/pth\n",
       "------------------------------------------------------------\n",
-      "Total Files: 1000\n",
+      "Total Files: 18629\n",
       "------------------------------------------------------------\n"
      ]
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,11 +314,11 @@
       "fitting Scalers: MaxAbsScaler, MinMaxScaler\n",
       "Done. Create DataSets...\n",
       "------------------------------------------------------------\n",
-      "Train size:  2048066\t\t(Files: 800)\n",
-      "Val. size:   413655\t\t(Files: 150)\n",
-      "Test size:   107094\t\t(Files: 50) \n",
+      "Train size:  37524829\t\t(Files: 14904)\n",
+      "Val. size:   7208107\t\t(Files: 2794)\n",
+      "Test size:   2397259\t\t(Files: 931) \n",
       " ------------------------------------------------------------\n",
-      "['V17_T859.parquet', 'V17_T3017.parquet', 'V18_T383.parquet']\n"
+      "['V15_T490.parquet', 'V12_T392.parquet', 'V18_T583.parquet']\n"
      ]
     }
    ],
@@ -349,6 +349,30 @@
     "                \"val\":      list(val_loader.dataset.file_list),\n",
     "                \"test\":     list(test_loader.dataset.file_list)}\n",
     "print([os.path.basename(_) for _ in subset_files[\"train\"][:3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch input shape: torch.Size([4069, 1, 14])\n",
+      "Batch target shape: torch.Size([4069])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get a batch from the train_loader\n",
+    "batch = next(iter(train_loader))\n",
+    "\n",
+    "# Print the dimensions of the batch\n",
+    "inputs, targets = batch\n",
+    "print(f\"Batch input shape: {inputs.shape}\")\n",
+    "print(f\"Batch target shape: {targets.shape}\")"
    ]
   },
   {
@@ -853,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
