--- a/src/LSTM/DataPipeline.ipynb
+++ b/src/LSTM/DataPipeline.ipynb
@@ -2,22 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''------------------------------------------------------------------\n",
-    "LSTM Training\n",
-    "Version: V1.7\n",
-    "Modified: 06.11.2024\n",
-    "William Siegle\n",
+    "DATA PIPELINE\n",
+    "Modified: 22.11.2024    William Siegle\n",
     "---------------------------------------------------------------------\n",
     "notebook can be converted to python script using: \n",
     "(python -m) jupytext --to py FILENAME.ipynb\n",
     "------------------------------------------------------------------'''\n",
     "from pathlib import Path\n",
     "\n",
-    "# SETTINGS ---------------------------------------------------------------------\n",
     "CONFIG = {\n",
     "    # SYSTEM: ---------------------------------------------------------------------\n",
     "    \"GPU_SELECT\":       0, # {None, 0,1,2,3}, None: CPU only\n",
