--- a/src/LSTM/LSTM_v7.ipynb
+++ b/src/LSTM/LSTM_v7.ipynb
@@ -2,41 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''------------------------------------------------------------------\n",
+    "---------------------------------------------------------------------\n",
     "LSTM Training\n",
-    "Version: V1.7\n",
-    "Modified: 06.11.2024\n",
-    "William Siegle\n",
+    "---------------------------------------------------------------------\n",
+    "Version: V1.7       Modified: 06.11.2024        William Siegle\n",
     "---------------------------------------------------------------------\n",
     "notebook can be converted to python script using: \n",
     "(python -m) jupytext --to py FILENAME.ipynb\n",
     "------------------------------------------------------------------'''\n",
     "from pathlib import Path\n",
     "\n",
-    "# SETTINGS ---------------------------------------------------------------------\n",
+    "# SETTINGS ------------------------------------------------------------------------\n",
     "CONFIG = {\n",
     "    # SYSTEM: ---------------------------------------------------------------------\n",
-    "    \"GPU_SELECT\":       0, # {None, 0,1,2,3}, None: CPU only\n",
-    "    \"INPUT_LOCATION\":   Path(\"TripSequences\", \"trips_processed_final\"),\n",
-    "    \"PTH_LOCATION\":     Path(\"src\", \"models\", \"pth\"),\n",
+    "    \"ROOT\":             Path('../..').resolve(),    # repository relavtive to this location\n",
+    "    \"INPUT_LOCATION\":   Path(\"TripSequences\", \"trips_processed_final\"), # relative to local data storage \n",
+    "    \"OUTPUT_LOCATION\":  Path(\"src\", \"models\", \"pth\"), # relative to ROOT\n",
+    "    \"GPU_SELECT\":       0, # {0,1,2,3, None: CPU only}\n",
+    "    \"TORCH_SEED\"  :     42,\n",
     "\n",
     "    # PREPROCESSING: --------------------------------------------------------------\n",
-    "    \"TRAIN_VAL_TEST\":   [0.8, 0.15, 0.05], # [train, val, test]\n",
-    "    \"MAX_FILES\":        None, #None, # None: all files\n",
+    "    \"TRAIN_VAL_TEST\":   [0.8, 0.15, 0.05], # [train, val, test splits]\n",
+    "    \"MAX_FILES\":        None, # None: all files\n",
     "    \n",
-    "    # TORCH: ----------------------------------------------------------------------\n",
-    "    \"TORCH_SEED\"  :     42,\n",
+    "    # MODEL: -----------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    # TRAINING: ----------------------------------------------------------------------\n",
     "    \"BATCH_SIZE\":       512,   # [16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768]\n",
     "    \"NUM_EPOCHS\":       3,\n",
     "    \"LEARNING_RATE\":    5e-3,   # 0.001 lr\n",
-    "    \"HIDDEN_SIZE\":      128,\n",
-    "    \"NUM_LAYERS\":       2,\n",
+    "    \"HIDDEN_SIZE\":      128,    # features in the hidden state h\n",
+    "    \"NUM_LAYERS\":       2,      # recurrent layers for stacked LSTMs. Default: 1\n",
     "    \"DROPOUT\":          0.4,\n",
     "    \"SEQ_LEN\":          100\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "}\n",
     "\n",
     "for key in CONFIG: globals()[key] = CONFIG[key]"
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +71,7 @@
     "# ------------ LOCATE REPOSITORY/DATASTORAGE IN CURRENT SYSTEM ENVIRONMENT  --------------\n",
     "import sys, os\n",
     "global ROOT, DATA_PATH\n",
-    "ROOT = Path('../..').resolve()\n",
+    "if 'ROOT' not in globals(): ROOT = Path('../..').resolve()\n",
     "print(f\"{'-'*60}\\nDirectories:\\n  {ROOT}:\\t\\t\\t{', '.join([_.name for _ in ROOT.glob('*/')])}\")\n",
     "sys.path.append(os.path.abspath(ROOT))\n",
     "from data import get_data_path  # paths set in \"data/__init__.py\"\n",
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -108,8 +117,6 @@
     "    from tabulate import tabulate\n",
     "    print(f\"{'-'*60}\\nRunning in script mode\")\n",
     "    \n",
-    "    \n",
-    "# ---------------------------------------------------------------------\n",
     "# IMPORTS ---------------------------------------------------------------------\n",
     "import math, time, random, pickle\n",
     "import numpy as np\n",
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +187,7 @@
     "    DEVICE = torch.device(\"cpu\")\n",
     "else:\n",
     "    DEVICE = torch.device(f\"cuda:{GPU_SELECT}\")\n",
-    "print(f\"Using: -->  {str(DEVICE).upper()}\")\n"
+    "print(f\"Using: -->  {str(DEVICE).upper()}\")"
    ]
   },
   {
@@ -193,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -204,29 +211,29 @@
       "Input Data:\tC:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data\\TripSequences\\trips_processed_final\n",
       "Store model in:\tC:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN\\src\\models\\pth\n",
       "------------------------------------------------------------\n",
-      "Total Files: 18629\n",
-      "------------------------------------------------------------\n",
-      "Filtered Files: 14052\n"
+      "Total Files:\t18629\n",
+      "Filtered Files:\t14052\n",
+      "------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
     "# FILE SOURCES ---------------------------------------------------------------\n",
     "input_folder = Path(DATA_PATH, INPUT_LOCATION) # Trip parquet files\n",
-    "pth_folder = Path(ROOT, PTH_LOCATION)\n",
+    "pth_folder = Path(ROOT, OUTPUT_LOCATION)\n",
     "print(f\"{'-'*60}\\nInput Data:\\t{input_folder}\\nStore model in:\\t{pth_folder}\")\n",
     "\n",
     "# PREPARE TRAIN & TEST SET ---------------------------------------------------\n",
     "all_files = [Path(input_folder, f) for f in os.listdir(input_folder) if f.endswith(\".parquet\")]\n",
     "files = all_files[:MAX_FILES]\n",
-    "print(f\"{'-'*60}\\nTotal Files: {len(files)}\\n{'-'*60}\")\n",
+    "print(f\"{'-'*60}\\nTotal Files:\\t{len(files)}\")\n",
     "# ---------------------------------------------------\n",
     "df = pd.read_parquet(Path(input_folder, random.choice(files)), engine='fastparquet')\n",
     "all_signals = df.columns\n",
     "assert len(all_signals) == 44\n",
     "\n",
-    "\n",
-    "# Filter files based on row count\n",
+    "# FILTER INPUT FILES --------------------------------------------------------\n",
+    "# Filter files based on row count \n",
     "filtered_files = []\n",
     "trip_lengths = []\n",
     "for file in files:\n",
@@ -236,7 +243,7 @@
     "        filtered_files.append(file)\n",
     "\n",
     "files = filtered_files\n",
-    "print(f\"Filtered Files: {len(files)}\")\n"
+    "print(f\"Filtered Files:\\t{len(files)}\\n{'-'*60}\")\n"
    ]
   },
   {
@@ -424,21 +431,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fitting Scalers: MaxAbsScaler, MinMaxScaler\n",
-      "Done. Create DataSets...\n",
-      "------------------------------------------------------------\n",
-      "Train size:  3275474\t\t(Files: 4000)\n",
-      "Val. size:   609742\t\t(Files: 750)\n",
-      "Test size:   232736\t\t(Files: 250) \n",
-      " ------------------------------------------------------------\n",
-      "['V13_T354.parquet', 'V101_T488.parquet', 'V10_T55.parquet']\n"
+     "ename": "NameError",
+     "evalue": "name 'train_subset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[52], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# GENERATE DATALOADERS  ---------------------------------------------------------------\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Note: 1. the scaler will be fitted only on the training data set\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#       2. shuffling is prohibited to maintain the time series order\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# TRAIN  ------------------------------------------------------------\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m TripDataset(\u001b[43mtrain_subset\u001b[49m, input_columns, target_column, scaler, target_scaler, fit\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      7\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m DataLoader(train_dataset, BATCH_SIZE, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# VAL ------------------------------------------------------------\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_subset' is not defined"
      ]
     }
    ],
@@ -468,7 +472,7 @@
     "subset_files = {\"train\":    list(train_loader.dataset.file_list),\n",
     "                \"val\":      list(val_loader.dataset.file_list),\n",
     "                \"test\":     list(test_loader.dataset.file_list)}\n",
-    "print([os.path.basename(_) for _ in subset_files[\"train\"][:3]])"
+    "print(f\"first 3 train files: {[os.path.basename(_) for _ in subset_files['train'][:3]]}\")"
    ]
   },
   {
@@ -661,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -726,6 +730,8 @@
     "# or define criterion function:\n",
     "criterion_list = [nn.MSELoss(), nn.L1Loss(), nn.SmoothL1Loss(), nn.HuberLoss(), MASE()]\n",
     "\n",
+    "string = \"nn.SmoothL1Loss()\"\n",
+    "criterion = eval(string) # nn.SmoothL1Loss()\n",
     "criterion = nn.SmoothL1Loss()\n",
     "\n",
     "# ------------------------------------------------------------------------------\n",
