--- a/src/LSTM/DataPipeline.ipynb
+++ b/src/LSTM/DataPipeline.ipynb
@@ -1251,20 +1251,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "TODOS:\n",
-    "- how to tell the loss function, which values are padded --> we have the lengths at least...\n",
-    "'''          \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# COLLECTING RESULTS AND META DATA ---------------------------------------------------\n",
     "trained['CONFIG'] = CONFIG\n",
     "trained['subset_files'] = subset_files\n",
@@ -1419,7 +1405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
