--- a/src/LSTM/FeatureImportance.ipynb
+++ b/src/LSTM/FeatureImportance.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROOT: C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN\n"
+     ]
+    }
+   ],
    "source": [
-    "'''------------------------------------------------------------------\n",
-    "---------------------------------------------------------------------\n",
-    "LSTM Training\n",
-    "---------------------------------------------------------------------\n",
-    "Version: V1.7       Modified: 06.11.2024        William Siegle\n",
-    "---------------------------------------------------------------------\n",
-    "notebook can be converted to python script using: \n",
-    "(python -m) jupytext --to py FILENAME.ipynb\n",
-    "------------------------------------------------------------------'''\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
     "# SETTINGS ------------------------------------------------------------------------\n",
@@ -27,7 +27,7 @@
     "    \"TORCH_SEED\"  :     17,\n",
     "\n",
     "    # DATA PREPROCESSING: ---------------------------------------------------------\n",
-    "    \"TRAIN_VAL_TEST\":   [0.8, 0.15, 0.05], # [train, val, test splits]\n",
+    "    \"TRAIN_VAL_TEST\":   [0.8, 0.10, 0.10], # [train, val, test splits]\n",
     "    \"MAX_FILES\":        None, # None: all files\n",
     "    \"SCALERS\":          {'feature_scaler': 'MaxAbsScaler()', 'target_scaler': 'MinMaxScaler(feature_range=(0, 1))'},\n",
     "    \"MIN_SEQ_LENGTH\":   60, # minimum sequence length in seconds\n",
@@ -70,9 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "Directories:\n",
+      "  C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN:\t\t\t.git, archive, data, project, ref, src, test\n",
+      "  C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data:\t\t\tnew_folder, OLD, processed, TripSequences\n",
+      "------------------------------------------------------------\n",
+      "Running in notebook mode\n"
+     ]
+    }
+   ],
    "source": [
     "# LOCATE REPOSITORY/DATASTORAGE IN CURRENT SYSTEM ENVIRONMENT  ---------------------------\n",
     "# ----------------------------------------------------------------------------------------\n",
@@ -145,9 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "Torch version:  2.5.1+cpu\n",
+      "Using: -->  CPU\n"
+     ]
+    }
+   ],
    "source": [
     "# DEVICE SELECTION ---------------------------------------------------------------------\n",
     "global DEVICE\n",
@@ -161,9 +184,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------\n",
+      "Input Data:\tC:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data\\TripSequences\\trips_processed_final\n",
+      "Store model in:\tC:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN\\src\\models\\pth\n",
+      "------------------------------------------------------------\n",
+      "Total Files:\t18629\n",
+      "Filtered Files:\t18629\n",
+      "------------------------------------------------------------\n",
+      "                FileName  Length  Index\n",
+      "0        V13_T25.parquet   20843   2426\n",
+      "1       V18_T775.parquet   19425  15996\n",
+      "2       V13_T352.parquet   18308   2540\n",
+      "3       V18_T972.parquet   17858  16215\n",
+      "4      V16_T1629.parquet   17519   7449\n",
+      "...                  ...     ...    ...\n",
+      "18624   V13_T127.parquet     112   2292\n",
+      "18625   V16_T523.parquet     112   8493\n",
+      "18626  V17_T4908.parquet     112  13358\n",
+      "18627   V101_T80.parquet     110    727\n",
+      "18628    V4_T515.parquet     110  18422\n",
+      "\n",
+      "[18629 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# FILE SOURCES ---------------------------------------------------------------\n",
     "input_folder = Path(DATA_PATH, INPUT_LOCATION) # Trip parquet files\n",
@@ -217,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +311,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fitting Scalers: MaxAbsScaler, MinMaxScaler\n"
+     ]
+    }
+   ],
    "source": [
     "# GENERATE DATALOADERS  ---------------------------------------------------------------\n",
     "'''\n",
@@ -313,8 +372,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
