--- a/src/LSTM/FeatureImportance.ipynb
+++ b/src/LSTM/FeatureImportance.ipynb
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
     "# ---------------------------------------------------------\n",
     "target_column = TARGETS\n",
     "input_columns = FEATURES\n",
-    "input_columns = list(set(all_signals) - set(columns_to_drop) - set(target_column))"
+    "input_columns = list(set(all_signals) - set(columns_to_drop)) # include target to generate one DF"
    ]
   },
   {
@@ -424,7 +424,15 @@
     }
    ],
    "source": [
-    "len(train_dataset.data)\n",
+    "len(train_dataset.data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Concatenate all data from the train dataset\n",
     "all_data = pd.concat([train_dataset[i][0].cpu().numpy() for i in range(len(train_dataset))], axis=0)\n",
     "# Convert to DataFrame\n",
